--- a/KindSplit.csproj
+++ b/KindSplit.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3D23008F-CE61-493D-9E52-007EFEC25D20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>things</RootNamespace>
-    <AssemblyName>things</AssemblyName>
+    <RootNamespace>KindSplit</RootNamespace>
+    <AssemblyName>KindSplit</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
